testcases/compiler2015/Phase2/CompileError/union-5100379071-puyouer.c
/*
 * union can't be used as scalar
 */
union X { int a; };

int main() {
    union X a;
    while (a)
        break;
    return 0;
}
